add module end-points